# generated.online

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  package-lock.json
.github/workflows/: codeql-analysis.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
chefkoch/: api.py  file_store.py  main.py  pyproject.toml
firebase/: fire_store.py
food/: .gitignore  README.md  pyproject.toml
food/src/chefkoch/: api.py  crawler.py  file_store.py  main.py
food/src/data_analysis/: analysis.py  main.py
food/src/preprocess/: data_handling.py  exporting.py  main.py  stopwords.py  utils.py
food/src/training/: run_finetuning.py  run_generation.py
frontend/: .gitignore
frontend/algolia/: package-lock.json
frontend/generated.online/: package-lock.json  package.json
frontend/generated.online/functions/: package-lock.json  package.json
frontend/generated.online/public/: index.html
frontend/generated.online/src/: main.js
frontend/generated.online/src/views/: Home.vue
frontend/recepies.generated.online/: .env  .env.development  .firebaserc  .gitignore  README.md  firebase.json  package-lock.json  package.json
frontend/recepies.generated.online/public/: index.html
frontend/recepies.generated.online/src/: App.vue  main.js  router.js  store.js
frontend/recepies.generated.online/src/components/: DownloadPopup.vue  EmojieBackground.vue  Footer.vue  Ingredient.vue  MoneyBar.vue  PayPalPostcard.vue  Paypal.vue  Postcard.vue  RecipeCard.vue  RecipeView.vue  Search.vue  Voting.vue  generateRecipeButton.vue
frontend/recepies.generated.online/src/functions/: emojiStorage.js  emojiUtils.js  getRandomRecipe.js  recipeUtils.js  recipe_to_color.js
frontend/recepies.generated.online/src/plugins/: vuetify.js
frontend/recepies.generated.online/src/views/: Footer.vue  Highscore.vue  Home.vue  Info.vue  PostcardDownload.vue  RandomRecipe.vue  Recipe.vue  Search.vue
preprocess/: main.py
scripts/: .gitignore  ingredients_by_frequency.txt  pyproject.toml
scripts/crawler/german-laws/: .gitignore  crawl.py  pyproject.toml
scripts/laws/: crawl.py  parse.py
scripts/recipes/: cassis.txt  cassis.txt_filtered.json  out2.txt  test_data.txt  upload.py
scripts/upload/: generatedonline-a1cb0-firebase-adminsdk-o3l86-5432fd6352.json  pyproject.toml  upload.py
scripts/upload.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
vue-frontend/: README.md  package-lock.json  package.json
vue-frontend/.firebase/: hosting.ZGlzdA.cache  hosting.cHVibGlj.cache
vue-frontend/functions/: package-lock.json
vue-frontend/src/: main.js
vue-frontend/src/views/: Home.vue
(+10 files in other folders)
