[tool.poetry]
name = "chefkoch"
version = "0.1.0"
description = ""
authors = ["Sebastian Fellner <fellnerseb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.8"
requests = "^2.22"
firebase-admin = "^3.0"
tqdm = "^4.36"
grpcio = "^1.24"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
