[tool.poetry]
name = "generated.online"
version = "0.1.0"
description = ""
authors = ["Sebastian Fellner <fellnerseb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.8"
requests = "^2.22"
firebase-admin = "^3.0"
tqdm = "^4.36"
grpcio = "^1.24"
joblib = "^0.13.2"
numpy = "^1.17"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
