[tool.poetry]
name = "generated.online"
version = "0.1.0"
description = ""
authors = ["Sebastian Fellner <fellnerseb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.8"
requests = "^2.22"
tqdm = "^4.36"
joblib = "^0.13.2"
numpy = "^1.17"
matplotlib = "^3.1"
wordcloud = "^1.5"
transformers = "^2.1.0"
torch = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
